[tool.poetry]
name = "vault-assessment-prometheus-exporter"
version = "1.1.15"
description = "Prometheus exporter to monitor custom metadata for KV2 secrets for (self-imposed) expiration."
authors = ["Eugene Davis <eugene.davis@tomtom.com>"]
readme = "README.md"

packages = [
    { include = "vault_monitor" },
]

[tool.poetry.scripts]
start_exporter = 'vault_monitor.scripts.start_exporter:main'
set_expiration = 'vault_monitor.expiration_monitor.set_expiration:main'

[tool.poetry.dependencies]
python = "^3.8"
hvac = "^1.0.2"
prometheus-client = "^0.15.0"
requests = "^2.27.1"
PyYAML = "^6.0"
Cerberus = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
pylint = "^2.13.7"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
types-requests = "^2.27.25"
types-PyYAML = "^6.0.7"
bandit = "^1.7.4"
bump2version = "^1.0.1"
pytest-mock = "^3.7.0"
mock = "^4.0.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 200


[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
exclude = 'tests'


[[tool.mypy.overrides]] 
module = ['hvac', 'cerberus']
ignore_missing_imports = true


[tool.pylint]

[tool.pylist.MASTER]
jobs = 0
limit-inference-results = 100

[tool.pylint.'MESSAGES CONTROL']
disable = [
   "raw-checker-failed",
   "bad-inline-option",
   "locally-disabled",
   "file-ignored",
   "suppressed-message",
   "useless-suppression",
   "deprecated-pragma",
   "use-symbolic-message-instead",
]

[tool.pylint.REFACTORING]
max-nested-blocks = 5

[tool.pylint.FORMAT]
max-line-length = 200
max-module-lines = 1000
max-args = 10

[tools.pylint.SIMILARITIES]
min-similarity-lines = 4
ignore-imports = true

[tool.pytest.ini_options]
minversion = "6.2.5"
testpaths = ["tests"]
addopts = "--cov=vault_monitor --cov-report term-missing"
